--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "url": "http://sindresorhus.com"
   },
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=0.10.0"
   },
   "scripts": {
     "test": "mocha"
@@ -33,8 +33,8 @@
     "code"
   ],
   "dependencies": {
-    "event-stream": "~3.0.20",
-    "gulp-util": "~2.1.3",
+    "gulp-util": "~2.2.12",
+    "through2": "~0.4.0",
     "esprima": "~1.0.4"
   },
   "devDependencies": {
