--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "code"
   ],
   "dependencies": {
-    "gulp-util": "~2.2.12",
-    "through2": "~0.4.0",
-    "esprima": "~1.0.4"
+    "esprima": "^1.2.1",
+    "gulp-util": "^2.2.12",
+    "through2": "^0.4.0"
   },
   "devDependencies": {
     "mocha": "*"
