--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
   "author": {
     "name": "Sindre Sorhus",
     "email": "sindresorhus@gmail.com",
-    "url": "http://sindresorhus.com"
+    "url": "sindresorhus.com"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": ">=4"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "xo && ava"
   },
   "files": [
     "index.js"
@@ -38,7 +38,11 @@
     "through2": "^2.0.0"
   },
   "devDependencies": {
+    "ava": "*",
     "gulp": "^3.9.1",
-    "mocha": "*"
+    "xo": "*"
+  },
+  "xo": {
+    "esnext": true
   }
 }
