--- a/package.json
+++ b/package.json
@@ -1,48 +1,46 @@
 {
-  "name": "gulp-jsvalidate",
-  "version": "3.0.0",
-  "description": "Validate JavaScript code and report possible syntax errors",
-  "license": "MIT",
-  "repository": "sindresorhus/gulp-jsvalidate",
-  "author": {
-    "name": "Sindre Sorhus",
-    "email": "sindresorhus@gmail.com",
-    "url": "sindresorhus.com"
-  },
-  "engines": {
-    "node": ">=4"
-  },
-  "scripts": {
-    "test": "xo && ava"
-  },
-  "files": [
-    "index.js"
-  ],
-  "keywords": [
-    "gulpplugin",
-    "js",
-    "javascript",
-    "syntax",
-    "errors",
-    "check",
-    "lint",
-    "parse",
-    "esprima",
-    "ast",
-    "source",
-    "code"
-  ],
-  "dependencies": {
-    "esprima": "^3.1.1",
-    "gulp-util": "^3.0.0",
-    "through2": "^2.0.0"
-  },
-  "devDependencies": {
-    "ava": "*",
-    "gulp": "^3.9.1",
-    "xo": "*"
-  },
-  "xo": {
-    "esnext": true
-  }
+	"name": "gulp-jsvalidate",
+	"version": "3.0.0",
+	"description": "Validate JavaScript code and report possible syntax errors",
+	"license": "MIT",
+	"repository": "sindresorhus/gulp-jsvalidate",
+	"author": {
+		"name": "Sindre Sorhus",
+		"email": "sindresorhus@gmail.com",
+		"url": "sindresorhus.com"
+	},
+	"engines": {
+		"node": ">=4"
+	},
+	"scripts": {
+		"test": "xo && ava"
+	},
+	"files": [
+		"index.js"
+	],
+	"keywords": [
+		"gulpplugin",
+		"js",
+		"javascript",
+		"syntax",
+		"errors",
+		"check",
+		"lint",
+		"parse",
+		"esprima",
+		"ast",
+		"source",
+		"code"
+	],
+	"dependencies": {
+		"esprima": "^4.0.0",
+		"plugin-error": "^0.1.2",
+		"through2": "^2.0.0"
+	},
+	"devDependencies": {
+		"ava": "*",
+		"gulp": "^3.9.1",
+		"vinyl": "^2.1.0",
+		"xo": "*"
+	}
 }
