--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"url": "sindresorhus.com"
 	},
 	"engines": {
-		"node": ">=4"
+		"node": ">=8"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -34,13 +34,22 @@
 	],
 	"dependencies": {
 		"esprima": "^4.0.0",
-		"plugin-error": "^0.1.2",
-		"through2": "^2.0.0"
+		"plugin-error": "^1.0.1",
+		"through2": "^3.0.1"
 	},
 	"devDependencies": {
-		"ava": "*",
-		"gulp": "^3.9.1",
+		"ava": "^2.3.0",
+		"gulp": "^4.0.2",
+		"p-event": "^4.1.0",
 		"vinyl": "^2.1.0",
-		"xo": "*"
+		"xo": "^0.24.0"
+	},
+	"peerDependencies": {
+		"gulp": ">=4"
+	},
+	"xo": {
+		"ignores": [
+			"fixture.js"
+		]
 	}
 }
