--- a/package.json
+++ b/package.json
@@ -47,6 +47,11 @@
 	"peerDependencies": {
 		"gulp": ">=4"
 	},
+	"peerDependenciesMeta": {
+		"gulp": {
+			"optional": true
+		}
+	},
 	"xo": {
 		"ignores": [
 			"fixture.js"
