Require Node.js 10

--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
 	"description": "Validate JavaScript code and report possible syntax errors",
 	"license": "MIT",
 	"repository": "sindresorhus/gulp-jsvalidate",
+	"funding": "https://github.com/sponsors/sindresorhus",
 	"author": {
 		"name": "Sindre Sorhus",
 		"email": "sindresorhus@gmail.com",
 		"url": "sindresorhus.com"
 	},
 	"engines": {
-		"node": ">=8"
+		"node": ">=10"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -42,7 +43,7 @@
 		"gulp": "^4.0.2",
 		"p-event": "^4.1.0",
 		"vinyl": "^2.1.0",
-		"xo": "^0.24.0"
+		"xo": "^0.25.3"
 	},
 	"peerDependencies": {
 		"gulp": ">=4"
