--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
 		"email": "sindresorhus@gmail.com",
 		"url": "https://sindresorhus.com"
 	},
+	"type": "module",
+	"exports": "./index.js",
 	"engines": {
-		"node": ">=10"
+		"node": ">=18"
 	},
 	"scripts": {
 		"test": "xo && ava"
@@ -34,16 +36,15 @@
 		"code"
 	],
 	"dependencies": {
-		"esprima": "^4.0.0",
-		"plugin-error": "^1.0.1",
-		"through2": "^3.0.1"
+		"esprima": "^4.0.1",
+		"gulp-plugin-extras": "^0.2.2"
 	},
 	"devDependencies": {
-		"ava": "^2.3.0",
+		"ava": "^5.3.1",
 		"gulp": "^4.0.2",
-		"p-event": "^4.1.0",
-		"vinyl": "^2.1.0",
-		"xo": "^0.25.3"
+		"p-event": "^6.0.0",
+		"vinyl": "^3.0.0",
+		"xo": "^0.56.0"
 	},
 	"peerDependencies": {
 		"gulp": ">=4"
