--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"type": "module",
 	"exports": "./index.js",
+	"sideEffects": false,
 	"engines": {
 		"node": ">=18"
 	},
@@ -36,15 +37,15 @@
 		"code"
 	],
 	"dependencies": {
-		"esprima": "^4.0.1",
-		"gulp-plugin-extras": "^0.2.2"
+		"@babel/parser": "^7.25.3",
+		"gulp-plugin-extras": "^1.0.0"
 	},
 	"devDependencies": {
-		"ava": "^5.3.1",
-		"gulp": "^4.0.2",
-		"p-event": "^6.0.0",
+		"ava": "^6.1.3",
+		"gulp": "^5.0.0",
+		"p-event": "^6.0.1",
 		"vinyl": "^3.0.0",
-		"xo": "^0.56.0"
+		"xo": "^0.59.3"
 	},
 	"peerDependencies": {
 		"gulp": ">=4"
